--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1766,3 +1766,9 @@ table.table form {
     border: 0;
     background: transparent;
 }
+
+.avatar {
+    width: 109px;
+    height: 109px;
+    object-fit: cover;
+}
