--- a/public/css/front.css
+++ b/public/css/front.css
@@ -4023,7 +4023,7 @@ about me
 subscribe newsletter
 ================*/
 
-.news-letter input[type="email"] {
+.news-letter .email {
     width: 100%;
     margin-bottom: 14px;
     border: 1px solid #eeeeee;
