--- a/resources/front/css/style.css
+++ b/resources/front/css/style.css
@@ -1038,6 +1038,10 @@ athuor
 /*===========
 blog css
 =============*/
+.decoration {
+    margin: 10px 0;
+}
+
 .decoration a {
     color: #60c7eb;
     border: 1px solid #60c7eb;
